# financier_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  script.py  test.py
src/: config.py  webapp.py
src/financier_bot/: config.py  main.py
src/financier_bot/telegram/: bot.py
src/services/: sheets.py  spreadsheet_description.md
src/telegram/: bot.py  utils.py
